refactor: add domains prefix to invitations
